Revert "overlapping bug"
This reverts commit 1f1d3725b85a5565966162f215cc2090e553fdcf.

--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -16,7 +16,6 @@
     width: 100% !important;
     top: 0% !important;
     left: 0% !important;
-    padding-bottom: 80px !important;
 }
 
 .nav-image{
